infra-as-code/k8s/books-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: ashwanth1109/books-client:latest
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 4000
      targetPort: 4000
