infra-as-code/k8s/books-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-db
  template:
    metadata:
      labels:
        app: books-db
    spec:
      containers:
        - name: books-db
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: books-db-svc
spec:
  selector:
    app: books-db
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
