infra-as-code/k8s/books-msvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
        - name: books
          image: ashwanth1109/books
---
apiVersion: v1
kind: Service
metadata:
  name: books-svc
spec:
  selector:
    app: books
  ports:
    - name: books
      protocol: TCP
      port: 4001 # FIXME: Violates SRP
      targetPort: 4001
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: books-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/books/?(.*)
            backend:
              serviceName: books-svc
              servicePort: 4001
